--- a/grails-app/assets/angular-app/app/index.html
+++ b/grails-app/assets/angular-app/app/index.html
@@ -13,17 +13,13 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
 
     <script src="app.js"></script>
-    <script src="view1/view1.js"></script>
-    <script src="view2/view2.js"></script>
+    <script src="customer/customer.js"></script>
+    <script src="newsletter/newsletter.js"></script>
     <script src="components/version/version.js"></script>
     <script src="components/version/version-directive.js"></script>
     <script src="components/version/interpolate-filter.js"></script>
 </head>
 <body>
-<ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-</ul>
 
 <div ng-view></div>
 
