--- a/grails-app/assets/angular-app/app/index.html
+++ b/grails-app/assets/angular-app/app/index.html
@@ -5,25 +5,21 @@
     <title>newsletter-grails-angular</title>
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="app.css">
 
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 
     <script src="app.js"></script>
     <script src="customer/customer.js"></script>
     <script src="newsletter/newsletter.js"></script>
-    <script src="components/version/version.js"></script>
-    <script src="components/version/version-directive.js"></script>
-    <script src="components/version/interpolate-filter.js"></script>
+    <script src="components/directives/directives.js"></script>
 </head>
 <body>
-
-<div ng-view></div>
-
-<div>newsletter-grails-angular-app: v<span app-version></span></div>
-
+    <div ng-view></div>
 </body>
 </html>
