--- a/grails-app/assets/angular-app/app/customer/customer.html
+++ b/grails-app/assets/angular-app/app/customer/customer.html
@@ -2,27 +2,43 @@
     <div class="row">
         <form class="form-horizontal">
             <div class="form-group">
-                <label class="col-sm-2 control-label" for="name">Name</label>
+                <label class="col-sm-2 control-label" for="firstname">Firstname</label>
 
                 <div class="col-sm-2">
-                    <input class="form-control form-control-lg" type="text" id="name" name="name"
-                           data-ng-model="customer.name" required>
+                    <input class="form-control form-control-lg" type="text" id="firstname" firstname="firstname"
+                           data-ng-model="customer.firstname" required>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label" for="surname">Surname</label>
+                <label class="col-sm-2 control-label" for="lastname">Surname</label>
 
                 <div class="col-sm-2">
-                    <input class="form-control form-control-lg" type="text" id="surname" name="surname"
-                           data-ng-model="customer.surname">
+                    <input class="form-control form-control-lg" type="text" id="lastname" name="lastname"
+                           data-ng-model="customer.lastname">
                 </div>
             </div>
-
             <div class="form-group">
-                <label class="col-sm-2 control-label" for="since">Customer since</label>
+                <label class="col-sm-2 control-label" for="email">eMail</label>
+
                 <div class="col-sm-2">
-                    <input class="form-control form-control-md" id="since" type="date"
-                           data-ng-model="customer.since">
+                    <input class="form-control form-control-lg" type="email" id="email" name="email"
+                           data-ng-model="customer.email">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label" for="phone">Phone</label>
+
+                <div class="col-sm-2">
+                    <input class="form-control form-control-lg" type="text" id="phone" name="phone"
+                           data-ng-model="customer.phone">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label" for="address">Address</label>
+
+                <div class="col-sm-2">
+                    <textarea class="form-control form-control-lg" id="address" name="address"
+                           data-ng-model="customer.phone"></textarea>
                 </div>
             </div>
 
