--- a/grails-app/assets/angular-app/app/index.html
+++ b/grails-app/assets/angular-app/app/index.html
@@ -17,7 +17,7 @@
     <script src="app.js"></script>
     <script src="customer/customer.js"></script>
     <script src="newsletter/newsletter.js"></script>
-    <script src="components/directives/directives.js"></script>
+    <script src="components/directives.js"></script>
 </head>
 <body>
     <div ng-view></div>
