--- a/grails-app/assets/angular-app/app/index.html
+++ b/grails-app/assets/angular-app/app/index.html
@@ -6,6 +6,11 @@
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+
+
+    <link rel="stylesheet" href="bower_components/codemirror/lib/codemirror.css">
+    <link rel="stylesheet" href="lib/angular-markdown-editor/angular-markdown-editor.min.css">
+
     <link rel="stylesheet" href="app.css">
 
     <script src="bower_components/angular/angular.js"></script>
@@ -13,6 +18,14 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+
+
+    <script src="bower_components/showdown/compressed/Showdown.js"></script>
+    <script src="bower_components/codemirror/lib/codemirror.js"></script>
+    <script src="bower_components/codemirror/addon/mode/overlay.js"></script>
+    <script src="bower_components/codemirror/mode/gfm/gfm.js"></script>
+    <script src="bower_components/codemirror/mode/markdown/markdown.js"></script>
+    <script src="lib/angular-markdown-editor/angular-markdown-editor.js"></script>
 
     <script src="app.js"></script>
     <script src="customer/customer.js"></script>
