--- a/grails-app/assets/angular-app/app/newsletter/newsletter.html
+++ b/grails-app/assets/angular-app/app/newsletter/newsletter.html
@@ -1,13 +1,22 @@
 <div class="well">
 
-    <div class="col-md-4">
+    <div class="col-md-2">
         <div ng-repeat="recipient in recipients">
             <label>{{recipient.firstname}} {{recipient.lastname}}</label>
         </div>
     </div>
 
-    <div class="col-md-8">
+    <div class="col-md-10">
+        <div class="row">
+            <div class="col-md-6 col-xs-12">
+                <textarea ui-markdown-editor="editorOptions" ng-model="markdownData"></textarea>
+            </div>
+            <div class="col-md-6 col-xs-12">
+                <div ng-bind-markdown="markdownData">
 
+                </div>
+            </div>
+        </div>
     </div>
 
 </div>
