--- a/grails-app/assets/javascripts/angular-app/app/index.html
+++ b/grails-app/assets/javascripts/angular-app/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="nga" class="no-js">
+<html lang="en" ng-app="angularApp.app" class="no-js">
 <head>
     <meta charset="utf-8">
     <title>newsletter-grails-angular</title>
